--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ p{
     font-style: normal;
     font-size: 95px;
     color: #D4AF37;
-    margin: 0 0 0 -60px;
+    margin: 30px 0 0 -60px;
 }
 
 #hero .hero-content{
