--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,6 @@ footer::before{
     align-items: flex-end;
 }
 
-
 .copyright img{
     width: 120px;
     height: 180px;
@@ -242,12 +241,13 @@ footer::before{
 
 .copyright p{
     margin: 0 20px 30px 0;
+    line-height: 30px;
 }
 
 .social{
     width: 40%;
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 45px;
 }
 
 .social .social-icon{
