--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h2, h3, h4{
 }
 
 p{
-    font-family: 'vazir', sans-serif;
+    font-family: 'shabnam', sans-serif;
     color: #9c9c9c;
 }
 
@@ -179,6 +179,8 @@ p{
 .features .features-item p{
     color: #4e4e4e;
     font-size: 15px;
+    line-height: 24px;
+    padding: 0 15px;
 }
 
 /* banner */
